# overheard

./: .gitignore  README.md  package.json
.github/workflows/: build-and-deploy.yml
client/: .gitignore  Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: config.json  fetcher.js  fetcher.ts  index.tsx  models.ts
client/src/components/: AddGroupModal.tsx  GroupTab.tsx  QuoteTab.tsx  Splash.tsx
client/src/components/Auth/: Login.tsx  Signup.tsx
client/src/components/Comment/: CommentCard.tsx  Comments.tsx
client/src/components/Group/: AddGroupModal.tsx  DeleteGroupModal.tsx  GroupButton.tsx  JoinGroupModal.tsx  ManageMembersModal.tsx  ShareGroupCodeModal.tsx
client/src/components/Nav/: AddBar.tsx  LoggedInNav.tsx  NavBar.tsx  SplashNav.tsx
client/src/components/Profile/: ProfileCard.tsx  QuoteGrid.tsx  UpdateProfileModal.tsx  UpdateProfilePasswordModal.tsx
client/src/pages/: App.tsx  LoginTest.tsx  Playground.tsx  Profile.tsx  QuotePage.tsx
k8s/: backend.yml  frontend.yml  ingress.yml
overheard-catalog/: Chart.yaml  values.yaml
overheard-catalog/templates/: additional.yaml  backend.yaml  frontend.yaml  ingress.yaml
server/: .dockerignore  .gitignore  Dockerfile  Makefile  Tasks.md  auth.py  config.py  crud.py  crud_fake.py  database.py  models.py  pyproject.toml  schemas.py  server.py  sql_test_app.db  test.py  test_crud.py  utils.py
server/routers/: groups.py
server/src/: auth.py  config.py  crud.py  database.py  models.py  schemas.py  server.py  test.py  utils.py
server/src/routers/: auth.py  comments.py  groups.py  quotes.py  user.py
src/components/: AddGroupModal.tsx  GroupTab.tsx  NavBar.tsx  QuoteTab.tsx  WelcomeNavBar.tsx
src/components/Nav/: AddBar.tsx  LoggedInNav.tsx  NavBar.tsx  SplashNav.tsx
src/components/Shared/: RoundButton.tsx
src/pages/: App.tsx
(+5 files in other folders)
