[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Karthik Macherla", email = "kmacher@seas.upenn.edu"},
]
dependencies = [
    "uvicorn>=0.16.0",
    "requests>=2.26.0",
    "fastapi[all]>=0.58.1",
    "sqlalchemy>=1.4.29",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
