[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Karthik Macherla <kmacher@seas.upenn.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
requests = "^2.27.1"
SQLAlchemy = "^1.4.31"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
google-auth = "^2.6.0"
bcrypt = "^3.2.0"
pylint = "^2.12.2"
uvicorn = "^0.17.1"
python-multipart = "^0.0.5"
python-dotenv = "^0.20.0"
autoflake = "^1.4"
boto3 = "^1.23.6"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
